SIXTH-99 - Fixed status alignment for arabic store

--- a/src/component/MyAccountReturnListItem/MyAccountReturnListItem.style.scss
+++ b/src/component/MyAccountReturnListItem/MyAccountReturnListItem.style.scss
@@ -31,6 +31,18 @@
             top: 50%;
             transform: translateY(-50%) rotate(-45deg) scale(1.5);
             width: 5px;
+
+            .PageWrapper_isArabic & {
+                left: 0;
+                right: unset;
+                transform: translateY(-50%) rotate(135deg) scale(1.5);
+            }
+        }
+
+        .PageWrapper_isArabic & {
+            padding-left: 20px;
+            padding-right: 0;
+            text-align: left;
         }
     }
 
